Update to apache 2.4 and fcgi php

--- a/etc/httpd/conf/extra/httpd-ssl.conf
+++ b/etc/httpd/conf/extra/httpd-ssl.conf
@@ -1,38 +1,37 @@
-#            _                                   
-#           (_)                                  
-#  _ __ ___  _ _ __   ___ _ __   ___  ___  _ __  
-# |  _   _ \| |  _ \ / _ \  _ \ / _ \/ _ \|  _ \ 
-# | | | | | | | | | |  __/ |_) |  __/ (_) | | | |
-# |_| |_| |_|_|_| |_|\___|  __/ \___|\___/|_| |_|
-#                        | |                     
-#                        |_|
-#
-# This is the main Apache HTTPS SSL configuration file.  
-#
+
+
+
 Listen 443
 
-AddType application/x-x509-ca-cert .crt
-AddType application/x-pkcs7-crl    .crl
+
+SSLCipherSuite HIGH:MEDIUM:!aNULL:!MD5
+
+
 SSLPassPhraseDialog  builtin
-SSLSessionCache        "shmcb:/var/run/httpd/ssl_scache(512000)"
+
+SSLSessionCache        "shmcb:/run/httpd/ssl_scache(512000)"
 SSLSessionCacheTimeout  300
-SSLMutex  "file:/var/run/httpd/ssl_mutex"
+
 
 <VirtualHost _default_:443>
 
-#   General setup for the virtual host
 DocumentRoot "/opt/minepeon/http"
 ServerName www.example.com:443
 ServerAdmin you@example.com
-#ErrorLog "/var/log/httpd/error_log"
+ErrorLog "/var/log/httpd/error_log"
 #TransferLog "/var/log/httpd/access_log"
 
 SSLEngine on
-SSLProtocol all -SSLv2
-SSLCipherSuite HIGH:MEDIUM:!aNULL:!MD5
 
 SSLCertificateFile "/etc/httpd/conf/server.crt"
+
 SSLCertificateKeyFile "/etc/httpd/conf/server.key"
+
+
+
+
+
+
 
 <FilesMatch "\.(cgi|shtml|phtml|php)$">
     SSLOptions +StdEnvVars
@@ -40,11 +39,12 @@ SSLCertificateKeyFile "/etc/httpd/conf/server.key"
 <Directory "/srv/http/cgi-bin">
     SSLOptions +StdEnvVars
 </Directory>
+
 BrowserMatch "MSIE [2-5]" \
          nokeepalive ssl-unclean-shutdown \
          downgrade-1.0 force-response-1.0
 
-#CustomLog "/var/log/httpd/ssl_request_log" \
+CustomLog "/var/log/httpd/ssl_request_log" \
           "%t %h %{SSL_PROTOCOL}x %{SSL_CIPHER}x \"%r\" %b"
 
 </VirtualHost>                                  
