--- a/etc/httpd/conf/httpd.conf
+++ b/etc/httpd/conf/httpd.conf
@@ -1,162 +1,153 @@
-#            _                                   
-#           (_)                                  
-#  _ __ ___  _ _ __   ___ _ __   ___  ___  _ __  
-# |  _   _ \| |  _ \ / _ \  _ \ / _ \/ _ \|  _ \ 
-# | | | | | | | | | |  __/ |_) |  __/ (_) | | | |
-# |_| |_| |_|_|_| |_|\___|  __/ \___|\___/|_| |_|
-#                        | |                     
-#                        |_|
-#
-# This is the main Apache HTTP server configuration file.  
-#
+
 ServerRoot "/etc/httpd"
 
-#Listen 12.34.56.78:80
+
 Listen 80
 
-LoadModule php5_module       modules/libphp5.so
-AddHandler php5-script php
-Include conf/extra/php5_module.conf
-
 LoadModule authn_file_module modules/mod_authn_file.so
-LoadModule authn_dbm_module modules/mod_authn_dbm.so
-LoadModule authn_anon_module modules/mod_authn_anon.so
-LoadModule authn_dbd_module modules/mod_authn_dbd.so
-LoadModule authn_default_module modules/mod_authn_default.so
+LoadModule authn_core_module modules/mod_authn_core.so
 LoadModule authz_host_module modules/mod_authz_host.so
 LoadModule authz_groupfile_module modules/mod_authz_groupfile.so
 LoadModule authz_user_module modules/mod_authz_user.so
-LoadModule authz_dbm_module modules/mod_authz_dbm.so
-LoadModule authz_owner_module modules/mod_authz_owner.so
-LoadModule authnz_ldap_module modules/mod_authnz_ldap.so
-LoadModule authz_default_module modules/mod_authz_default.so
+LoadModule authz_core_module modules/mod_authz_core.so
+LoadModule access_compat_module modules/mod_access_compat.so
 LoadModule auth_basic_module modules/mod_auth_basic.so
-LoadModule auth_digest_module modules/mod_auth_digest.so
-LoadModule file_cache_module modules/mod_file_cache.so
-LoadModule cache_module modules/mod_cache.so
-LoadModule disk_cache_module modules/mod_disk_cache.so
-LoadModule mem_cache_module modules/mod_mem_cache.so
-LoadModule dbd_module modules/mod_dbd.so
-LoadModule dumpio_module modules/mod_dumpio.so
 LoadModule reqtimeout_module modules/mod_reqtimeout.so
-LoadModule ext_filter_module modules/mod_ext_filter.so
 LoadModule include_module modules/mod_include.so
 LoadModule filter_module modules/mod_filter.so
-LoadModule substitute_module modules/mod_substitute.so
-LoadModule deflate_module modules/mod_deflate.so
-LoadModule ldap_module modules/mod_ldap.so
+LoadModule mime_module modules/mod_mime.so
 LoadModule log_config_module modules/mod_log_config.so
-LoadModule log_forensic_module modules/mod_log_forensic.so
-LoadModule logio_module modules/mod_logio.so
 LoadModule env_module modules/mod_env.so
-LoadModule mime_magic_module modules/mod_mime_magic.so
-LoadModule cern_meta_module modules/mod_cern_meta.so
-LoadModule expires_module modules/mod_expires.so
 LoadModule headers_module modules/mod_headers.so
-LoadModule ident_module modules/mod_ident.so
-LoadModule usertrack_module modules/mod_usertrack.so
-LoadModule unique_id_module modules/mod_unique_id.so
 LoadModule setenvif_module modules/mod_setenvif.so
 LoadModule version_module modules/mod_version.so
 LoadModule proxy_module modules/mod_proxy.so
 LoadModule proxy_connect_module modules/mod_proxy_connect.so
 LoadModule proxy_ftp_module modules/mod_proxy_ftp.so
 LoadModule proxy_http_module modules/mod_proxy_http.so
+LoadModule proxy_fcgi_module modules/mod_proxy_fcgi.so
 LoadModule proxy_scgi_module modules/mod_proxy_scgi.so
+LoadModule proxy_wstunnel_module modules/mod_proxy_wstunnel.so
 LoadModule proxy_ajp_module modules/mod_proxy_ajp.so
 LoadModule proxy_balancer_module modules/mod_proxy_balancer.so
-LoadModule ssl_module modules/mod_ssl.so
-LoadModule mime_module modules/mod_mime.so
-LoadModule dav_module modules/mod_dav.so
+LoadModule proxy_express_module modules/mod_proxy_express.so
+LoadModule slotmem_shm_module modules/mod_slotmem_shm.so
+LoadModule lbmethod_byrequests_module modules/mod_lbmethod_byrequests.so
+LoadModule lbmethod_bytraffic_module modules/mod_lbmethod_bytraffic.so
+LoadModule lbmethod_bybusyness_module modules/mod_lbmethod_bybusyness.so
+LoadModule lbmethod_heartbeat_module modules/mod_lbmethod_heartbeat.so
+LoadModule mpm_event_module modules/mod_mpm_event.so
+LoadModule unixd_module modules/mod_unixd.so
 LoadModule status_module modules/mod_status.so
 LoadModule autoindex_module modules/mod_autoindex.so
-LoadModule asis_module modules/mod_asis.so
-LoadModule info_module modules/mod_info.so
-LoadModule suexec_module modules/mod_suexec.so
-LoadModule cgi_module modules/mod_cgi.so
-LoadModule cgid_module modules/mod_cgid.so
-LoadModule dav_fs_module modules/mod_dav_fs.so
-LoadModule vhost_alias_module modules/mod_vhost_alias.so
 LoadModule negotiation_module modules/mod_negotiation.so
 LoadModule dir_module modules/mod_dir.so
-LoadModule imagemap_module modules/mod_imagemap.so
-LoadModule actions_module modules/mod_actions.so
-LoadModule speling_module modules/mod_speling.so
 LoadModule userdir_module modules/mod_userdir.so
 LoadModule alias_module modules/mod_alias.so
-LoadModule rewrite_module modules/mod_rewrite.so
+LoadModule ssl_module modules/mod_ssl.so
+LoadModule socache_shmcb_module modules/mod_socache_shmcb.so
 
-<IfModule !mpm_netware_module>
-<IfModule !mpm_winnt_module>
-User minepeon
-Group minepeon
+<IfModule unixd_module>
+User http
+Group http
 
 </IfModule>
-</IfModule>
+
+
 ServerAdmin you@example.com
-DocumentRoot "/opt/minepeon/http/redirect"
+
 
 <Directory />
-    Options FollowSymLinks
-    AllowOverride None
-    Order deny,allow
-    Deny from all
+    AllowOverride none
+    Require all denied
 </Directory>
 
-<Directory "/opt/minepeon/http">
+
+DocumentRoot "/opt/minepeon/http/"
+<Directory "/opt/minepeon/http/">
     Options Indexes FollowSymLinks
+
     AllowOverride All
-    Order allow,deny
-    Allow from all
+
+    Require all granted
 </Directory>
 
 <IfModule dir_module>
     DirectoryIndex index.php index.html
 </IfModule>
 
-<FilesMatch "^\.ht">
-    Order allow,deny
-    Deny from all
-    Satisfy All
-</FilesMatch>
+<Files ".ht*">
+    Require all denied
+</Files>
+
+ErrorLog "/var/log/httpd/error_log"
+
+LogLevel warn
+
+<IfModule log_config_module>
+    LogFormat "%h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" combined
+    LogFormat "%h %l %u %t \"%r\" %>s %b" common
+
+    <IfModule logio_module>
+      # You need to enable mod_logio.c to use %I and %O
+      LogFormat "%h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\" %I %O" combinedio
+    </IfModule>
+
+    CustomLog "/var/log/httpd/access_log" common
+
+</IfModule>
 
 <IfModule alias_module>
+
+
     ScriptAlias /cgi-bin/ "/srv/http/cgi-bin/"
 
 </IfModule>
 
 <IfModule cgid_module>
-    #Scriptsock /run/httpd/cgisock
 </IfModule>
 
 <Directory "/srv/http/cgi-bin">
     AllowOverride None
     Options None
-    Order allow,deny
-    Allow from all
+    Require all granted
 </Directory>
-DefaultType text/plain
 
 <IfModule mime_module>
     TypesConfig conf/mime.types
 
     AddType application/x-compress .Z
     AddType application/x-gzip .gz .tgz
+
+
+
 </IfModule>
 
-# Multi-language error messages
+
+
+
+
+
+Include conf/extra/httpd-mpm.conf
+
 Include conf/extra/httpd-multilang-errordoc.conf
 
-# Fancy directory listings
 Include conf/extra/httpd-autoindex.conf
 
-# Language settings
 Include conf/extra/httpd-languages.conf
 
-# Various default settings
+Include conf/extra/httpd-userdir.conf
+
+Include conf/extra/php5_module.conf
+
+
+
 Include conf/extra/httpd-default.conf
 
-# Secure (SSL/TLS) connections
+<IfModule proxy_html_module>
+Include conf/extra/proxy-html.conf
+</IfModule>
+
 Include conf/extra/httpd-ssl.conf
 
 <IfModule ssl_module>
@@ -164,7 +155,12 @@ SSLRandomSeed startup builtin
 SSLRandomSeed connect builtin
 </IfModule>
 
-# Uncomment this to turn on logging
-#Include conf/extra/log.conf
+#LoadModule proxy_handler_module modules/mod_proxy_handler.so
+<FilesMatch \.php$>
+    SetHandler "proxy:fcgi://127.0.0.1:9000/"
+</FilesMatch>
+<IfModule dir_module>
+    DirectoryIndex index.php index.html
+</IfModule>
 
-
+ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://127.0.0.1:9000/opt/minepeon/http/$1
