Rewrite config files for apache 2.4

--- a/etc/httpd/conf/httpd.conf
+++ b/etc/httpd/conf/httpd.conf
@@ -1,3 +1,14 @@
+#            _
+#           (_)
+#  _ __ ___  _ _ __   ___ _ __   ___  ___  _ __
+# |  _   _ \| |  _ \ / _ \  _ \ / _ \/ _ \|  _ \
+# | | | | | | | | | |  __/ |_) |  __/ (_) | | | |
+# |_| |_| |_|_|_| |_|\___|  __/ \___|\___/|_| |_|
+#                        | |
+#                        |_|
+#
+# This is the main Apache HTTP server configuration file.
+#
 
 ServerRoot "/etc/httpd"
 
@@ -46,30 +57,29 @@ LoadModule userdir_module modules/mod_userdir.so
 LoadModule alias_module modules/mod_alias.so
 LoadModule ssl_module modules/mod_ssl.so
 LoadModule socache_shmcb_module modules/mod_socache_shmcb.so
+LoadModule rewrite_module modules/mod_rewrite.so
 
 <IfModule unixd_module>
-User http
-Group http
-
+    User minepeon
+    Group minepeon
 </IfModule>
 
-
 ServerAdmin you@example.com
-
 
 <Directory />
     AllowOverride none
     Require all denied
 </Directory>
 
-
 DocumentRoot "/opt/minepeon/http/"
+
 <Directory "/opt/minepeon/http/">
     Options Indexes FollowSymLinks
-
     AllowOverride All
-
     Require all granted
+    RewriteEngine On
+    RewriteCond %{HTTPS} off
+    RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI}
 </Directory>
 
 <IfModule dir_module>
