--- a/etc/httpd/conf/extra/httpd-ssl.conf
+++ b/etc/httpd/conf/extra/httpd-ssl.conf
@@ -44,7 +44,7 @@ BrowserMatch "MSIE [2-5]" \
          nokeepalive ssl-unclean-shutdown \
          downgrade-1.0 force-response-1.0
 
-CustomLog "/var/log/httpd/ssl_request_log" \
+#CustomLog "/var/log/httpd/ssl_request_log" \
           "%t %h %{SSL_PROTOCOL}x %{SSL_CIPHER}x \"%r\" %b"
 
 </VirtualHost>                                  
