Fixes cannot get content from https

--- a/etc/php/php.ini
+++ b/etc/php/php.ini
@@ -879,7 +879,7 @@ extension=gettext.so
 ;extension=mysqli.so
 ;extension=mysql.so
 ;extension=odbc.so
-;extension=openssl.so
+extension=openssl.so
 ;extension=pdo_mysql.so
 ;extension=pdo_odbc.so
 ;extension=pdo_pgsql.so
